RESOLVED FIXED58289
On Solaris 10 with SS12 compiler, TCMalloc_PageHeap::runScavengerThread(void* context) is expected to return a value
https://bugs.webkit.org/show_bug.cgi?id=58289
Summary On Solaris 10 with SS12 compiler, TCMalloc_PageHeap::runScavengerThread(void*...
Ben Taylor
Reported 2011-04-11 17:01:59 PDT
wtf/FastMalloc.cpp fails to compile on Solaris 10 with SS12 C++ compiler with the following error: "wtf/FastMalloc.cpp", line 1502: Error: "static WTF::TCMalloc_PageHeap::runScavengerThread(void*)" is expected to return a value.
Attachments
Patch to fix compile issue with Solaris 10 and Studio 12 CC, this code expects to return a value. (1.37 KB, patch)
2011-04-11 18:18 PDT, Ben Taylor
no flags
Updated patch that fixes the currently broken white space issue. (1.41 KB, patch)
2011-04-11 18:31 PDT, Ben Taylor
no flags
Updated patch that fixes the currently broken white space issue, and trailing ) (1.41 KB, patch)
2011-04-11 20:23 PDT, Ben Taylor
no flags
patch that fixes the issues, and passes check-webkit-style locally (1.46 KB, patch)
2011-04-11 20:48 PDT, Ben Taylor
no flags
Ben Taylor
Comment 1 2011-04-11 18:18:56 PDT
Created attachment 89138 [details] Patch to fix compile issue with Solaris 10 and Studio 12 CC, this code expects to return a value. Patch to fix the compile issue on Solaris 10 with Sun Studio 12 CC
WebKit Review Bot
Comment 2 2011-04-11 18:21:30 PDT
Attachment 89138 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/wtf/FastMalloc.cpp:1623: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ben Taylor
Comment 3 2011-04-11 18:31:39 PDT
Created attachment 89141 [details] Updated patch that fixes the currently broken white space issue. Note to self. Simple fixes - run check-webkit-style. Missed the 2-space indent originally in the source.
Ben Taylor
Comment 4 2011-04-11 20:23:48 PDT
Created attachment 89150 [details] Updated patch that fixes the currently broken white space issue, and trailing ) Fixed now.
Ben Taylor
Comment 5 2011-04-11 20:48:46 PDT
Created attachment 89152 [details] patch that fixes the issues, and passes check-webkit-style locally This should do it.
Alexey Proskuryakov
Comment 6 2011-04-11 22:04:28 PDT
Comment on attachment 89152 [details] patch that fixes the issues, and passes check-webkit-style locally Honestly, I don't understand why we don't just always have this "return 0". +#if (COMPILER(MSVC) || COMPILER(SUNCC)) Unneeded parentheses here.
WebKit Commit Bot
Comment 7 2011-04-11 22:38:04 PDT
The commit-queue encountered the following flaky tests while processing attachment 89152 [details]: java/lc3/JavaObject/JavaObjectToInt-002-n.html bug 58299 (author: ap@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8 2011-04-11 22:40:23 PDT
Comment on attachment 89152 [details] patch that fixes the issues, and passes check-webkit-style locally Clearing flags on attachment: 89152 Committed r83557: <http://trac.webkit.org/changeset/83557>
WebKit Commit Bot
Comment 9 2011-04-11 22:40:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.