2011-04-11  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=58289

        Fix compilation on Solaris/Studio 12 C++ in wtf/FastMalloc.cpp,
        WTF::TCMalloc_PageHeap::runScavengerThread(void*) expected to return a value.

        * wtf/FastMalloc.cpp:
        (WTF::TCMalloc_PageHeap::runScavengerThread):

Canonical link: https://commits.webkit.org/73317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83557 268f45cc-cd09-0410-ab3c-d52691b4dbfc